# Integration-of-GPT-4o-Vision-and-EfficientNetB3-for-Skin-Cancer-Classification-in-Chatbot-App

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  knowledge-base.md
model/: README.md
routes/: api_routes.py  article_routes.py  chat_routes.py  main_routes.py  ui_routes.py
schemas/: chat.py  detection.py  image.py
scripts/: init_kb.sh  run_eval.sh
services/image/: classifier.py
services/rag/: app_state.py  chain.py  disclaimer.py  ingestion.py  logging_config.py  memory.py  safety.py
static/article/: script.js  style.css
static/chatbot/: script.js  style.css
static/css/: app.css
static/input/: script.js  style.css
static/js/: chat.js  theme.js  upload.js
templates/: base.html  chat.html  home.html  upload.html
templates/article/: article1.html  article2.html  article3.html  article4.html  article5.html  article6.html
templates/partials/: disclaimer_bar.html  navbar.html
tests/: conftest.py
tests/eval/: REPORT.md  gold_set.json  run_eval.py  threshold_sweep.py
tests/integration/: test_api_routes.py  test_chat_route.py  test_e2e_smoke.py  test_llm_swap.py  test_ui_routes.py  test_vector_store_swap.py
tests/unit/: test_cache.py  test_chain.py  test_citation.py  test_disclaimer.py  test_embedder.py  test_image_classifier.py  test_ingestion.py  test_ingestion_pubmed.py  test_language.py  test_llm_provider.py  test_logging_config.py  test_prompt.py  test_pubmed.py  test_retriever.py  test_safety.py  test_vector_store.py
utils/: chat.py  validation.py
(+27 files in other folders)
